# fillerai

./: .gitignore  package-lock.json  package.json
client/: package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  index.tsx
client/src/components/: GameBoard.tsx  colorSelect.tsx
client/src/features/counter/: Counter.tsx  counterSlice.ts
client/src/hooks/: useWebSocket.ts
client/src/store/: gameSplice.ts  hooks.ts  index.ts
client/src/types/: gamestate.js
server/: CMakeLists.txt  build.sh
server/src/: game_logic.cpp  game_logic.h  main.cpp
